--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<posts></posts>
-<github-followers></github-followers>
+<navbar></navbar>
+<router-outlet></router-outlet>
+
+<!-- <posts></posts>
+<github-followers></github-followers> -->
