--- a/src/app/components/github-followers/github-followers.component.html
+++ b/src/app/components/github-followers/github-followers.component.html
@@ -12,8 +12,8 @@
   </div>
   <div class="flex-grow-1 ms-3">
     <h5 class="mt-0">
-      <a href="">{{ f.login }}</a>
+      <a [routerLink]="[f.id]" href="">{{ f.login }}</a>
     </h5>
-    {{f.followers_url }}
+    {{ f.followers_url }}
   </div>
 </div>
