--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,13 +16,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" routerLinkActive="active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="posts" href="#">Posts</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="posts" href="#">Posts</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="github-followers" href="#"
+          <a class="nav-link" routerLinkActive="active" routerLink="github-followers" href="#"
             >Github Followers</a
           >
         </li>
