open project in office

--- a/src/app/components/github-followers/github-followers.component.html
+++ b/src/app/components/github-followers/github-followers.component.html
@@ -12,7 +12,7 @@
   </div>
   <div class="flex-grow-1 ms-3">
     <h5 class="mt-0">
-      <a [routerLink]="[f.id]" href="">{{ f.login }}</a>
+      <a [routerLink]="[f.login,f.id]" href="">{{ f.login }}</a>
     </h5>
     {{ f.followers_url }}
   </div>
