--- a/src/app/components/github-profile/github-profile.component.html
+++ b/src/app/components/github-profile/github-profile.component.html
@@ -17,6 +17,7 @@
   <br />
   <h5>Test</h5>
   <p>url parameter: {{ param | json }}</p>
+  <p>url parameter: {{ queryParam | json }}</p>
   <P
     >api url: <a [href]="user?.url">{{ user?.url }}</a></P
   >
