--- a/src/app/components/github-profile/github-profile.component.html
+++ b/src/app/components/github-profile/github-profile.component.html
@@ -21,4 +21,5 @@
   <P
     >api url: <a [href]="user?.url">{{ user?.url }}</a></P
   >
+  <button class="btn btn-primary" (click)="navFollowersList()">Back</button>
 </div>
